[package]
name = "asymptote2"
version = "0.1.0"
authors = ["Maximilian Lupke <maxlupke@gmail.com>"]
license = "GPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
fathom-syzygy = "0.1"
parking_lot = "0.12.1"
static_init = "1.0.2"
thiserror = "1.0.32"

[dev-dependencies]
pretty_assertions = "1.2.1"
proptest = "1.0.0"
test-case = "2.2.1"

[profile.release]
lto = true
debug = true
codegen-units = 1

[features]
tune = []
